--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -5,7 +5,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+pnpm-debug.log*
 lerna-debug.log*
+*_log.txt
+*_report.json
 
 node_modules
 dist
