feat: Introduce Hugging Face Spaces deployment files (Dockerfile.hf, nginx.conf, start_hf.sh) and add SECRET_KEY to docker-compose.yml.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,6 +95,7 @@ services:
       - MINIO_ACCESS_KEY=minioadmin
       - MINIO_SECRET_KEY=minioadmin
       - BUCKET_NAME=reponote-files
+      - SECRET_KEY=supersecretkey
     depends_on:
       - minio
 
